Changed menu items in acitivtyMain Renamed some files

--- a/IIFYM_Tracker/src/main/res/layout/activity_add_daily_item.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_add_daily_item.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.kareem.IIFYM_Tracker.Activities.Main.New.activityViewDailyItem">
+    tools:context=".Activities.Main.activitySelectDailyItem">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -135,7 +135,8 @@
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:weightSum="1">
 
                     <EditText
                         android:layout_width="wrap_content"
@@ -143,7 +144,6 @@
                         android:inputType="number|numberDecimal"
                         android:ems="4"
                         android:id="@+id/etxtPortionAmount"
-                        android:layout_weight="1"
                         android:hint="0000"
                         android:gravity="center_vertical|center_horizontal|center"
                         android:textAppearance="@android:style/TextAppearance.Material.Small" />
