--- a/IIFYM_Tracker/src/main/res/layout/activity_food_manager.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_food_manager.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.kareem.IIFYM_Tracker.Activities.Main.New.activityViewSavedItems">
+    tools:context="com.example.kareem.IIFYM_Tracker.Activities.Main.activityFoodManager">
 
     <LinearLayout
         android:orientation="vertical"
