Finished the java and xml for AddDailyItem

--- a/IIFYM_Tracker/src/main/res/layout/activity_add_daily_item.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_add_daily_item.xml
@@ -141,12 +141,12 @@
                     <EditText
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:inputType="number|numberDecimal"
                         android:ems="4"
                         android:id="@+id/etxtPortionAmount"
                         android:hint="0000"
                         android:gravity="center_vertical|center_horizontal|center"
-                        android:textAppearance="@android:style/TextAppearance.Material.Small" />
+                        android:textAppearance="@android:style/TextAppearance.Material.Small"
+                        android:maxLength="4" />
 
                     <TextView
                         android:text="@string/lblPortionType"
