--- a/IIFYM_Tracker/src/main/res/layout/activity_food_manager.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_food_manager.xml
@@ -14,18 +14,33 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
-        <EditText
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/etxtSearch"
-            android:hint="Search ..."
-            android:drawableLeft="?android:attr/actionModeWebSearchDrawable"
-            tools:layout_editor_absoluteY="0dp"
-            tools:layout_editor_absoluteX="0dp" />
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="50dp"
+                fab:srcCompat="@drawable/ic_search"
+                android:id="@+id/iconSearch"
+                android:scaleType="fitCenter" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:inputType="textCapSentences"
+                android:ems="10"
+                android:id="@+id/etxtSearch"
+                android:hint="Search ..."
+                tools:layout_editor_absoluteY="0dp"
+                tools:layout_editor_absoluteX="0dp"
+                android:layout_weight="0.75" />
+        </LinearLayout>
 
         <ListView
             android:layout_width="match_parent"
