--- a/IIFYM_Tracker/src/main/res/layout/activity_add_daily_item.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_add_daily_item.xml
@@ -146,7 +146,8 @@
                         android:hint="0000"
                         android:gravity="center_vertical|center_horizontal|center"
                         android:textAppearance="@android:style/TextAppearance.Material.Small"
-                        android:maxLength="4" />
+                        android:maxLength="4"
+                        android:inputType="numberDecimal" />
 
                     <TextView
                         android:text="@string/lblPortionType"
