--- a/IIFYM_Tracker/src/main/res/layout/activity_view_daily_item.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_view_daily_item.xml
@@ -17,15 +17,16 @@
 
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="170dp"
-            android:layout_height="wrap_content"
+            android:layout_width="328dp"
+            android:layout_height="200dp"
             android:id="@+id/layoutInfo"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintHorizontal_bias="0.0">
+            app:layout_constraintBottom_toBottomOf="@+id/listviewIngredients"
+            app:layout_constraintHorizontal_bias="1.0"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintVertical_bias="0.0">
 
             <LinearLayout
                 android:orientation="vertical"
@@ -137,7 +138,7 @@
 
                     <TextView
                         android:text="@string/lblPortionAmount"
-                        android:layout_width="70dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="40dp"
                         android:id="@+id/lblPortionAmount"
                         android:textSize="14sp"
@@ -152,7 +153,8 @@
                         android:id="@+id/lblPortionType"
                         android:textAlignment="textStart"
                         android:gravity="center"
-                        android:textColor="@color/colorPrimary"/>
+                        android:textColor="@color/colorPrimary"
+                        android:layout_marginLeft="2dp" />
 
 
                 </LinearLayout>
@@ -160,35 +162,6 @@
             </LinearLayout>
 
         </LinearLayout>
-
-        <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            app:layout_constraintTop_toBottomOf="@+id/layoutInfo"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintVertical_bias="0.0"
-            android:id="@+id/listviewIngredients" />
-
-        <lecho.lib.hellocharts.view.PieChartView
-            android:id="@+id/piechartMacros"
-            android:layout_width="180dp"
-            android:layout_height="180dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="false"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="264dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="@+id/layoutInfo"
-            app:layout_constraintVertical_bias="0.0"
-            android:layout_marginTop="16dp"
-            android:layout_marginStart="16dp" />
 
         <TextView
             android:text="@string/lblDeleteFromDaily"
@@ -227,9 +200,21 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="@+id/piechartMacros"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintVertical_bias="1.0" />
+
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            app:layout_constraintTop_toBottomOf="@+id/layoutInfo"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.0"
+            android:id="@+id/listviewIngredients" />
     </android.support.constraint.ConstraintLayout>
 
 </RelativeLayout>
