--- a/IIFYM_Tracker/src/main/res/layout/activity_home.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_home.xml
@@ -35,7 +35,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
 
-        <LinearLayout
+        <!--<LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -77,7 +77,7 @@
                     android:textAlignment="viewEnd" />
             </LinearLayout>
 
-        </LinearLayout>
+        </LinearLayout>-->
 
         <LinearLayout
             android:id="@+id/linearlayoutCalories"
