--- a/IIFYM_Tracker/src/main/res/layout/activity_user_info.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_user_info.xml
@@ -3,7 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+    android:layout_marginRight="@dimen/activity_horizontal_margin"
+    android:layout_marginTop="@dimen/activity_vertical_margin"
+    android:layout_marginBottom="@dimen/activity_vertical_margin">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -14,11 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="25dp" />
-
-                <EditText
+            <EditText
                     android:inputType="textCapSentences"
                     android:ems="8"
                     android:id="@+id/etxtName"
@@ -29,18 +29,15 @@
                     android:textColorHint="?android:attr/textColorHint"
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:paddingEnd="@dimen/activity_horizontal_margin"
-                    android:paddingStart="@dimen/activity_horizontal_margin"/>
+                    android:layout_height="50dp" />
 
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:id="@+id/linearlayoutDOB"
-                android:paddingStart="@dimen/activity_horizontal_margin"
-                android:paddingEnd="@dimen/activity_horizontal_margin"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:weightSum="1">
 
                 <TextView
                     android:text="@string/dateOfBirth"
@@ -49,22 +46,39 @@
                     android:id="@+id/lblDOB"
                     android:textAppearance="@android:style/TextAppearance.Medium"
                     android:textColor="?attr/colorPrimary"
-                    android:layout_weight="0.5"
                     android:layout_gravity="center_vertical|center_horizontal" />
 
-                <EditText
-                    android:layout_height="wrap_content"
-                    android:inputType="textPersonName"
-                    android:text="@string/dateInitial"
-                    android:ems="3"
-                    android:id="@+id/etxtDateOfBirth"
-                    android:layout_weight="0.5"
-                    android:drawablePadding="10dp"
-                    android:textColor="?attr/colorPrimary"
-                    android:drawableEnd="@drawable/ic_calendar"
-                    android:layout_width="wrap_content"
-                    android:gravity="center_vertical|center|end"
-                    android:layout_gravity="end" />
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="150dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="end"
+                    android:gravity="end"
+                    android:layout_weight="0.26">
+
+                    <ImageView
+                        android:layout_width="55dp"
+                        android:layout_height="wrap_content"
+                        app:srcCompat="@drawable/ic_calendar"
+                        android:id="@+id/icon_calendar"
+                        android:paddingBottom="15dp"
+                        android:paddingLeft="10dp"
+                        android:paddingTop="10dp"
+                        android:layout_gravity="center_vertical|center_horizontal|center"
+                        android:layout_weight="0.25" />
+
+                    <EditText
+                        android:layout_height="wrap_content"
+                        android:inputType="textPersonName"
+                        android:text="@string/dateInitial"
+                        android:ems="3"
+                        android:id="@+id/etxtDateOfBirth"
+                        android:textColor="?attr/colorPrimary"
+                        android:layout_width="wrap_content"
+                        android:gravity="center_vertical|center_horizontal|center"
+                        android:layout_weight="1.08" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
@@ -73,8 +87,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/linearlayoutGender"
-                android:paddingStart="@dimen/activity_horizontal_margin"
-                android:paddingEnd="@dimen/activity_horizontal_margin"
                 android:layout_weight="0.5">
 
                 <TextView
@@ -125,9 +137,7 @@
                 android:layout_height="match_parent"
                 tools:layout_editor_absoluteY="8dp"
                 tools:layout_editor_absoluteX="8dp"
-                android:id="@+id/linearlayoutUnitSystem"
-                android:paddingStart="@dimen/activity_horizontal_margin"
-                android:paddingEnd="@dimen/activity_horizontal_margin" >
+                android:id="@+id/linearlayoutUnitSystem">
 
                 <TextView
                     android:text="@string/unitSystem"
@@ -176,9 +186,7 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:id="@+id/linearlayoutHeightWeight"
-                android:paddingStart="@dimen/activity_horizontal_margin"
-                android:paddingEnd="@dimen/activity_horizontal_margin">
+                android:id="@+id/linearlayoutHeightWeight">
 
                 <LinearLayout
                     android:orientation="horizontal"
@@ -285,8 +293,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:id="@+id/linearlayoutWorkoutFreq"
-                android:paddingStart="@dimen/activity_horizontal_margin"
-                android:paddingEnd="@dimen/activity_horizontal_margin"
                 android:layout_weight="0.5">
 
                 <TextView
@@ -313,8 +319,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:id="@+id/linearlayoutGoals"
-                android:paddingStart="@dimen/activity_horizontal_margin"
-                android:paddingEnd="@dimen/activity_horizontal_margin"
                 android:layout_weight="0.5">
 
                 <TextView
