--- a/IIFYM_Tracker/src/main/res/layout/list_item.xml
+++ b/IIFYM_Tracker/src/main/res/layout/list_item.xml
@@ -19,6 +19,17 @@
             android:layout_weight="1"
             android:textSize="14sp" />
 
+        <TextView
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="00.0 Servings"
+            android:id="@+id/lblPortionDetails"
+            android:layout_alignParentRight="true"
+            android:textColor="@color/colorPrimary"
+            android:textSize="14sp"
+            android:layout_width="wrap_content"
+            android:layout_weight="1" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -33,16 +44,6 @@
             android:id="@+id/lblBrand"
             android:layout_weight="1"
             android:textColor="@color/colorPrimary" />
-
-        <TextView
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="00.0 Servings"
-            android:id="@+id/lblPortionDetails"
-            android:layout_alignParentRight="true"
-            android:textColor="@color/colorPrimary"
-            android:textSize="14sp"
-            android:layout_width="wrap_content" />
 
     </LinearLayout>
 
