--- a/IIFYM_Tracker/src/main/res/menu/menu_nutrition_settings.xml
+++ b/IIFYM_Tracker/src/main/res/menu/menu_nutrition_settings.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.kareem.IIFYM_Tracker.Activities.UserLoginAuthentification.activityUserMacros">
     <item
-        android:id="@+id/menu_user_macros"
+        android:id="@+id/menu_save"
         android:orderInCategory="100"
-        android:title="@string/menuFinish"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        android:icon="@drawable/ic_save"
+        android:title="menu_save" />
 </menu>
