--- a/IIFYM_Tracker/src/main/res/menu/menu_user_info.xml
+++ b/IIFYM_Tracker/src/main/res/menu/menu_user_info.xml
@@ -5,6 +5,6 @@
     <item
         android:id="@+id/menu_user_info"
         android:orderInCategory="100"
-        android:title="@string/menu_next"
+        android:title="@string/menuNext"
         app:showAsAction="always" />
 </menu>
