--- a/IIFYM_Tracker/src/main/res/layout/activity_select_daily_item.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_select_daily_item.xml
@@ -46,7 +46,9 @@
             android:id="@+id/lblFrequent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/lblFrequent" />
+            android:text="@string/lblFrequent"
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="3dp" />
 
         <ListView
             android:layout_width="match_parent"
