--- a/IIFYM_Tracker/src/main/res/layout/activity_user_info.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_user_info.xml
@@ -32,13 +32,25 @@
                     android:layout_height="50dp"
                 android:textSize="14sp" />
 
-            <LinearLayout
-                android:orientation="horizontal"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:id="@+id/linearlayoutDOB"
-                android:layout_weight="1"
-                android:weightSum="1">
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <EditText
+                    android:layout_height="50dp"
+                    android:inputType="textPersonName"
+                    android:text="@string/dateInitial"
+                    android:ems="3"
+                    android:id="@+id/etxtDateOfBirth"
+                    android:textColor="?attr/colorPrimary"
+                    android:textSize="14sp"
+                    android:gravity="right|center_vertical"
+                    android:layout_gravity="right|center_vertical"
+                    android:drawableRight="@drawable/drawable_ic_calendar"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_width="110dp" />
 
                 <TextView
                     android:text="@string/dateOfBirth"
@@ -48,29 +60,11 @@
                     android:textAppearance="@android:style/TextAppearance.Medium"
                     android:textColor="?attr/colorPrimary"
                     android:layout_gravity="center_vertical|center_horizontal"
-                    android:textSize="14sp" />
-
-                <EditText
-                    android:layout_height="wrap_content"
-                    android:inputType="textPersonName"
-                    android:text="@string/dateInitial"
-                    android:ems="3"
-                    android:id="@+id/etxtDateOfBirth"
-                    android:textColor="?attr/colorPrimary"
-                    android:layout_width="wrap_content"
                     android:textSize="14sp"
-                    android:gravity="right|center"
-                    android:layout_gravity="right|center_vertical"
-                    android:layout_weight="0.58" />
-
-                <ImageView
-                    android:layout_width="25dp"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/ic_calendar"
-                    android:id="@+id/icon_calendar"
-                    android:layout_gravity="right" />
-
-            </LinearLayout>
+                    android:layout_alignBaseline="@+id/etxtDateOfBirth"
+                    android:layout_alignBottom="@+id/etxtDateOfBirth"
+                    android:layout_alignParentStart="true" />
+            </RelativeLayout>
 
             <LinearLayout
                 android:orientation="horizontal"
