Added fragments for settings

--- a/IIFYM_Tracker/src/main/res/values/styles.xml
+++ b/IIFYM_Tracker/src/main/res/values/styles.xml
@@ -14,6 +14,13 @@
         <item name="windowNoTitle">false</item>
     </style>
 
+    <style name="settingsTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColorPrimary">@color/White</item>
+    </style>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
