Added fragment_profile and fragment_app_settings

--- a/IIFYM_Tracker/src/main/res/layout/fragment_nutrition.xml
+++ b/IIFYM_Tracker/src/main/res/layout/fragment_nutrition.xml
@@ -23,10 +23,8 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="5dp"
                 android:gravity="right|center_horizontal|center"
-                android:layout_gravity="center_vertical|center_horizontal|center"
-                android:layout_marginTop="5dp">
+                android:layout_gravity="center_vertical|center_horizontal|center">
 
                 <RelativeLayout
                     android:layout_width="wrap_content"
