--- a/IIFYM_Tracker/src/main/res/layout/fragment_app_settings.xml
+++ b/IIFYM_Tracker/src/main/res/layout/fragment_app_settings.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.kareem.IIFYM_Tracker.Activities.Settings.fragmentAppSettings">
+    tools:context="com.example.kareem.IIFYM_Tracker.Activities.Settings.fragmentPreferences">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
