--- a/IIFYM_Main/src/main/res/menu/menu_home.xml
+++ b/IIFYM_Main/src/main/res/menu/menu_home.xml
@@ -7,7 +7,7 @@
         android:orderInCategory="100"
         android:title="@string/actionNutritionSettings"
         app:showAsAction="always"
-        android:icon="@drawable/ic_macro_settings"
+        android:icon="@drawable/ic_settings"
         />
     <item
         android:id="@+id/actionFoodManager"
