--- a/IIFYM_Main/src/main/res/layout/fragment_goals.xml
+++ b/IIFYM_Main/src/main/res/layout/fragment_goals.xml
@@ -295,19 +295,17 @@
 
                     <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="35dp">
+                        android:layout_height="35dp"
+                        android:layout_gravity="center_vertical|center_horizontal|center"
+                        android:gravity="center_vertical|center_horizontal|center">
 
-                        <Button
+                        <ImageButton
                             android:id="@+id/btnSave"
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
-                            android:layout_alignParentTop="true"
-                            android:layout_centerHorizontal="true"
-                            android:layout_gravity="right"
-                            android:background="@drawable/btn_iifym_style"
-                            android:gravity="right"
-                            android:text="Save"
-                            android:textAlignment="center" />
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@color/Transparent"
+                            android:backgroundTint="@color/Transparent"
+                            app:srcCompat="@drawable/ic_floppy_save" />
                     </RelativeLayout>
 
                 </LinearLayout>
