--- a/IIFYM_Main/src/main/res/values/styles.xml
+++ b/IIFYM_Main/src/main/res/values/styles.xml
@@ -36,9 +36,10 @@
     </style>
 
     <style name="menu_labels_style">
-        <item name="android:padding">4dp</item>
-        <item name="android:background">@color/colorPrimaryLight</item>
-        <item name="android:textColor">@color/WhiteSmoke</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:background">@color/Transparent</item>
+        <item name="android:textColor">@color/colorPrimary</item>
     </style>
 
 </resources>
