--- a/IIFYM_Main/src/main/res/layout/activity_select_daily_item.xml
+++ b/IIFYM_Main/src/main/res/layout/activity_select_daily_item.xml
@@ -92,8 +92,8 @@
             fab:fab_label="@string/toolbarCreateNewFood"
             fab:fab_showShadow="false"
             fab:fab_size="normal"
-            fab:menu_colorPressed="@color/fabWhitePressed"
-            fab:menu_colorRipple="#99FFFFFF" />
+            fab:fab_colorPressed="@color/colorPrimaryLight"
+            fab:fab_colorRipple="#99FFFFFF" />
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/fabCreateNewMeal"
@@ -104,8 +104,8 @@
             fab:fab_label="@string/lblCreateNewMeal"
             fab:fab_showShadow="false"
             fab:fab_size="normal"
-            fab:menu_colorPressed="@color/fabWhitePressed"
-            fab:menu_colorRipple="#99FFFFFF" />
+            fab:fab_colorPressed="@color/colorPrimaryLight"
+            fab:fab_colorRipple="#99FFFFFF" />
 
     </com.github.clans.fab.FloatingActionMenu>
 
