--- a/IIFYM_Main/src/main/res/layout/activity_food_manager.xml
+++ b/IIFYM_Main/src/main/res/layout/activity_food_manager.xml
@@ -89,8 +89,8 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_food"
             fab:fab_colorNormal="@color/Transparent"
-            fab:menu_colorPressed="@color/fabWhitePressed"
-            fab:menu_colorRipple="#99FFFFFF"
+            fab:fab_colorPressed="@color/colorPrimaryLight"
+            fab:fab_colorRipple="#99FFFFFF"
             fab:fab_label="@string/toolbarCreateNewFood"
             fab:fab_showShadow="false"
             fab:fab_size="normal" />
@@ -101,8 +101,8 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_meal"
             fab:fab_colorNormal="@color/Transparent"
-            fab:menu_colorPressed="@color/fabWhitePressed"
-            fab:menu_colorRipple="#99FFFFFF"
+            fab:fab_colorPressed="@color/colorPrimaryLight"
+            fab:fab_colorRipple="#99FFFFFF"
             fab:fab_label="@string/lblCreateNewMeal"
             fab:fab_showShadow="false"
             fab:fab_size="normal" />
