--- a/IIFYM_Main/src/main/res/layout/list_item.xml
+++ b/IIFYM_Main/src/main/res/layout/list_item.xml
@@ -53,42 +53,42 @@
         android:layout_height="wrap_content" >
 
         <TextView
-            android:text="Calories"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/lblCalories"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textColor="@color/CaloriesProgessColor"
+            android:text="Calories"
+            android:textColor="?attr/colorPrimary"
             android:textSize="14sp" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Carbs"
             android:id="@+id/lblCarbs"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textColor="@color/CarbProgressColor"
+            android:text="Carbs"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="?attr/colorPrimary"
             android:textSize="14sp" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Protein"
             android:id="@+id/lblProtein"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textColor="@color/ProteinProgessColor"
+            android:text="Protein"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="?attr/colorPrimary"
             android:textSize="14sp" />
 
         <TextView
+            android:id="@+id/lblFat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Fat"
-            android:id="@+id/lblFat"
             android:layout_weight="1"
-            android:textColor="@color/FatProgessColor"
+            android:text="Fat"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="?attr/colorPrimary"
             android:textSize="14sp" />
 
     </LinearLayout>
