--- a/IIFYM_Main/src/main/res/layout/content_home.xml
+++ b/IIFYM_Main/src/main/res/layout/content_home.xml
@@ -20,6 +20,12 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tablayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tabMode="fixed"
+            app:tabGravity="fill"/>
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/activity_home" />
