--- a/IIFYM_Main/src/main/res/layout/fragment_day.xml
+++ b/IIFYM_Main/src/main/res/layout/fragment_day.xml
@@ -11,13 +11,22 @@
     android:layout_marginRight="@dimen/activity_horizontal_margin"
     android:layout_marginLeft="@dimen/activity_horizontal_margin"
     android:layout_marginTop="5dp">
+    <TextView
+        android:text="Today"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/lblSelectedDate"
+        android:textSize="18dp"
+        android:textColor="@color/black_light"
+        android:textStyle="bold"
+        android:layout_weight="0.2" />
+
     <LinearLayout
         android:id="@+id/linearlayoutBase"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:layout_marginTop="32dp">
 
         <!--<LinearLayout
             android:orientation="horizontal"
